RESOLVED FIXED48148
ASSERT while viewing Google C++ style guide
https://bugs.webkit.org/show_bug.cgi?id=48148
Summary ASSERT while viewing Google C++ style guide
Adam Barth
Reported 2010-10-22 12:44:08 PDT
ASSERT while viewing Google C++ style guide
Attachments
Patch (3.41 KB, patch)
2010-10-22 12:48 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-10-22 12:48:31 PDT
Eric Seidel (no email)
Comment 2 2010-10-22 12:51:20 PDT
Comment on attachment 71586 [details] Patch OK. I assume finishParsing() does nothing else we'd need here?
Tony Gentilcore
Comment 3 2010-10-22 12:57:50 PDT
Nice. Thanks for the fix.
Tony Gentilcore
Comment 4 2010-10-22 13:00:42 PDT
*** Bug 47305 has been marked as a duplicate of this bug. ***
Adam Barth
Comment 5 2010-10-22 13:06:28 PDT
close() calls finishParsing() for us. That how it ... finishes parsing. :)
WebKit Commit Bot
Comment 6 2010-10-22 13:06:32 PDT
Comment on attachment 71586 [details] Patch Clearing flags on attachment: 71586 Committed r70327: <http://trac.webkit.org/changeset/70327>
WebKit Commit Bot
Comment 7 2010-10-22 13:06:37 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 8 2010-10-22 14:00:21 PDT
http://trac.webkit.org/changeset/70327 might have broken GTK Linux 64-bit Debug The following tests are not passing: mathml/presentation/fenced-mi.xhtml mathml/presentation/subsup.xhtml
Note You need to log in before you can comment on or make changes to this bug.