2010-10-22  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        ASSERT while viewing Google C++ style guide
        https://bugs.webkit.org/show_bug.cgi?id=48148

        Make sure we don't hit an ASSERT when an XSLT outputs HTML.

        * fast/xsl/resources/to-html.xsl: Added.
        * fast/xsl/transform-to-html-expected.txt: Added.
        * fast/xsl/transform-to-html.xml: Added.
2010-10-22  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        ASSERT while viewing Google C++ style guide
        https://bugs.webkit.org/show_bug.cgi?id=48148

        This code used to stop the parser twice.  Instead of reaching in an
        trying to stop the parser manually, we now just let close() do the work
        for us.

        Test: fast/xsl/transform-to-html.xml

        * xml/XSLTProcessor.cpp:
        (WebCore::XSLTProcessor::createDocumentFromSource):

git-svn-id: svn://svn.chromium.org/blink/trunk@70327 bbb929c8-8fbe-4397-9dbb-9b2b20218538