third_party/WebKit/WebCore/xml/XSLTProcessor.cpp
@@ -91,7 +91,6 @@ PassRefPtr<Document> XSLTProcessor::createDocumentFromSource(const String& sourc
     result->setDecoder(decoder.release());
 
     result->write(documentSource);
-    result->finishParsing();
     result->close();
 
     return result.release();
