third_party/WebKit/LayoutTests/fast/xsl/resources/to-html.xsl
@@ -1,0 +1,11 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+  <xsl:output method="html"/>
+  <xsl:template match="test">
+    <script>
+      if (window.layoutTestController)
+          layoutTestController.dumpAsText();
+    </script>
+    PASS
+  </xsl:template>
+</xsl:stylesheet> 
